--- a/config/scaffolding/TestDocIssueProject.yml
+++ b/config/scaffolding/TestDocIssueProject.yml
@@ -7,3 +7,8 @@ packages:
   gitUrl: https://github.com/Pooja-Anand-IBM-2
   gitUsername: Pooja-Anand-IBM-2
   gitBranch: main
+services:
+- serviceName: project.testdocissue.integrations:test1
+  packages:
+  - name: TestDocIssueProject
+    version: "1.0"
