--- a/config/scaffolding/TestDocIssueProject.yml
+++ b/config/scaffolding/TestDocIssueProject.yml
@@ -8,7 +8,7 @@ packages:
   gitUsername: Pooja-Anand-IBM-2
   gitBranch: main
 services:
-- serviceName: project.testdocissue.integrations:ttttt
+- serviceName: project.testdocissue.integrations:FLOW_7046
   packages:
   - name: TestDocIssueProject
     version: "1.0"
