--- a/config/scaffolding/TestDocIssueProject.yml
+++ b/config/scaffolding/TestDocIssueProject.yml
@@ -12,3 +12,7 @@ services:
   packages:
   - name: TestDocIssueProject
     version: "1.0"
+- serviceName: project.testdocissue.integrations:test1
+  packages:
+  - name: TestDocIssueProject
+    version: "1.0"
